--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,24 @@ body {
    padding: 20px 15px;
 }
 
+.otp-group {
+   display: flex;
+   width: 100%;
+   max-width: 360px;
+   column-gap: 10px;
+}
+
+.otp-input {
+   width: 100%;
+   height: 60%;
+   border: 1px solid #ccc;
+   border-radius: 8px;
+   text-align: center;
+   font-size: 32px;
+   font-weight: bold;
+   line-height: 1;
+}
+
 @keyframes logo-spin {
    from {
       transform: rotate(0deg);
