--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,38 @@ body {
    min-height: 100vh;
 }
 
+.container {
+   width: 100%;
+   max-width: 800px;
+   margin: 0 auto;
+   padding: 20px 15px;
+}
+
+.otp-group {
+   display: flex;
+   width: 100%;
+   max-width: 360px;
+   outline: none;
+   column-gap: 10px;
+}
+
+.otp-input {
+   width: 100%;
+   height: 60%;
+   border: 1px solid #ccc;
+   border-radius: 8px;
+   transition: all 350ms ease-in-out;
+   text-align: center;
+   font-size: 32px;
+   outline: none;
+   font-weight: bold;
+   line-height: 1;
+}
+
+.otp-input:focus-within {
+   border: 1px solid #242424;
+}
+
 @media (prefers-color-scheme: light) {
    :root {
       color: #213547;
